[package]
name = "rmeet"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/simon-b/rmeet"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
colored = "2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
